// one size fit all message to just use one wire for a peer's message bus
message PeerMessage {
  required string name = 1;
  optional HeartBeat heartBeat = 2;
  optional PeerList peerList = 3;
  optional HoldElection holdElection = 4;
  optional Ballot ballot = 5;
}

message HeartBeat {
  required uint64 createdTime = 1;
}

message PeerList {
  repeated string addresses = 1;
}

message HoldElection {
  required uint32 term = 1;
  required uint32 lastLogTerm = 2;
  required uint64 lastLogIndex = 3;
}

message Ballot {
  required string name = 1;
}
